modified readme file

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Object-oriented code in C++ for finite element analysis, using JemJive library
+This repository contains a finite element code developed using the JemJive library in C++ at the Delft University of Technology. The code has been developed in parts by several authors and copyright protected.
